@@ -43,7 +43,7 @@ Please be aware of the fact that this document is under construction.</EM>
 <LI><A HREF="konsole-5.html#ss5.5">5.5 Color Scheme</A>
 <LI><A HREF="konsole-5.html#ss5.6">5.6 Fonts</A>
 <LI><A HREF="konsole-5.html#ss5.7">5.7 Security</A>
-<LI><A HREF="konsole-5.html#ss5.8">5.8 Known Bugs (konsole-0.8.6)</A>
+<LI><A HREF="konsole-5.html#ss5.8">5.8 Known Bugs</A>
 <LI><A HREF="konsole-5.html#ss5.9">5.9 Features That Will Not Be Implemented.</A>
 </UL>
 <HR>
