@@ -1,3 +1,6 @@
+18 Mar 1999
+- added grantpt to prevent eavesdroping the slave tty.
+  konsole now depends on at least glibc2.1
 03 Mar 1999
 - added -name
 - Shift-Insert pastes
